2019-09-19  Steve Baird  <baird@adacore.com>

	* sem_prag.adb (Preferred_String_Type): A new function. Given an
	expression, determines whether the preference rules defined for
	the third-and-later arguments of pragma Annotate suffice to
	determine the type of the expression. If so, then the preferred
	type is returned; if not then Empty is returned. Handles
	concatenations.
	(Analyze_Pragma): Replace previous code, which dealt only with
	string literals, with calls to the new Preferred_String_Type
	function, which also handles concatenations.
	* doc/gnat_rm/implementation_defined_pragmas.rst: Update
	documentation for pragma Annotate.
	* gnat_rm.texi: Regenerate.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_util.adb (Is_Possibly_Unaligned_Slice): Do not return true
	on pure alignment considerations if the target does not require
	the strict alignment of memory accesses.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_ch12.adb (Check_Private_View): Add a comment to indicate
	future work.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_aggr.adb (Has_Mutable_Components): Look at the underlying
	type of components to find out whether they are mutable.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_ch12.adb (Instantiate_Package_Body): Check that the body
	has not already been instantiated when the body of the parent
	was being loaded.

2019-09-19  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_util.adb (In_Instance): Test whether the current unit has
	been analyzed instead of being on the scope stack to detect the
	case of actuals of an instantiation of a generic child unit done
	as a compilation unit.

2019-09-19  Dmitriy Anisimkov  <anisimko@adacore.com>

	* libgnat/g-socket.ads, libgnat/g-socket.adb
	(Create_Socket_Pair): New routine.
	* libgnat/g-socthi.ads (OS_Has_Socketpair): Boolean constant.
	(C_Socketpair): New imported routine.
	* libgnat/g-socthi__mingw.ads, libgnat/g-socthi__vxworks.ads