@@ -1,3 +1,7 @@
+2019-09-19  Tom Tromey  <tromey@adacore.com>
+
+	* gnat.dg/bias1.adb: New testcase.
+
 2019-09-19  Steve Baird  <baird@adacore.com>
 
 	* gnat.dg/annotation1.adb: New testcase.
